# svmai-cli

./: .gitignore  ACTUAL_TESTING_EVIDENCE.md  CHANGELOG.md  CONFIG_PATH_UPDATE.md  CONTRIBUTING.md  Cargo.toml  EXAMPLE_SESSIONS.md  LICENSE  QA_REVIEW.md  QA_TASK_COMPLETION.md  README.md  REFINEMENT_SUMMARY.md  SECURITY_SUMMARY.md  SELF_REFLECTION.md  TESTING_SUMMARY.md  TUI_FEATURES.md  TUI_IMPROVEMENTS.md  TUI_SELF_ASSESSMENT.md  architecture.md  copilot-instructions.md  svmai.1  test-tui.sh  todo.md
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: copilot-setup-steps.yml  release.yml  rust.yml
src/: config.rs  file_searcher.rs  key_validator.rs  logging.rs  main.rs  secure_storage.rs  transaction_handler.rs  tui.rs  vanity_wallet.rs  wallet_manager.rs
