[package]
name = "svmai"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.11.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
solana-sdk = "3.0.0"
keyring = "3.6.3"
walkdir = "2.5.0"
dirs = "6.0.0" # For finding home directory
aes-gcm = "0.10.3" # For AES-GCM encryption
rand = "0.9.2"    # For generating nonces/IVs
hex = "0.4.3"     # For encoding/decoding master key if needed for storage/debug

# TUI Libraries
ratatui = { version = "0.29.0", features = ["all-widgets", "crossterm"] }
crossterm = "0.29.0"
num_cpus = "1.16.0"

[dev-dependencies]
tempfile = "3.21.0"

